fix(update): relaunch on non-ascii paths and restart timeout